fixing input sizing issue on iphone

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -197,19 +197,21 @@ html,body {
   display: block;
   margin-top: 2em;
   input {
+    box-sizing: border-box;
     -webkit-appearance: none;
     border-radius: 0;
     -webkit-border-radius: 0px;
     border: none;
     background: @text-white !important;
     outline: none;
-    height: 24px;
+    height: 26px;
     width: 130px;
     color: @background;
     padding-left: 5px;
     font-size: 14px;
   }
   .input-button {
+    box-sizing: border-box;
     padding: 1px;
     margin-left: -3px;
     width: 100px;
@@ -265,8 +267,5 @@ html,body {
   .timer {
     font-size: 11vw !important;
   }
-  .input-button {
-    height: 28px;
-  };
 }
 
